# Phidgets-ROS

./: CMakeLists.txt  README.md  package.xml
launch/: read_sensor.launch  simple_launcher.launch
scripts/: example_100Kg.py  phidget_500Kg.py  triplet_100Kg.py
