<?xml version="1.0"?>
<package format="2">
  <name>phidgets_ros</name>
  <version>0.0.0</version>
  <description>Phidgets_ROS Package</description>
  <maintainer email="dimitris.chaikalis@nyu.edu">Dimitris Chaikalis</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>Phidget22</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>Phidget22</exec_depend>


</package>
